--- a/_posts/2024-05-28-xs-leaks101-0.md
+++ b/_posts/2024-05-28-xs-leaks101-0.md
@@ -1,7 +1,8 @@
 ---
 title: XS-Leaks101#0
-description: XS Leaks 기법에 대한 설명입니다.
-author: 임예준(Burnnnnny)
+description: XS Leaks 기법에 대한 설명과 Space War에 출제된 문제를 풀어보는 write-up입니다.
+author:
+    name: 임예준(Burnnnnny)
 date: 2024-05-28 02:17:33 +0900
 tags: [tech, webhacking]
 categories: [Tech, Webhacking]
