XS-Leak101-1작성및 오타수정

--- a/_posts/2024-05-28-xs-leaks101-0.md
+++ b/_posts/2024-05-28-xs-leaks101-0.md
@@ -21,7 +21,7 @@ pin: false
     - LoX-Zombie
 4. 추가 코멘트
 5. Reference
-
+<br>
 
 ## XS-Leaks이란
 안녕하세요. Knights of the SPACE 멤버 임예준(Burnnnnny)입니다. 
@@ -35,7 +35,7 @@ Blind SQL injection은 보통 Python으로 코드를 짜는 반면, XS-Leaks은 
 
 이번 글에서는 Space War에 출제된 기법 2가지를 문제 write-up과 함께 설명해보겠습니다. 
 해당 문제는 [chall.hspace.io](https://chall.hspace.io)에서 다시 풀어보실 수 있으니 아래 글을 참고해서 풀어보셔도 되고 
-참고 없이 직접 풀어보셔도 좋습니다. :smile: 
+참고 없이 직접 풀어보셔도 좋습니다.  
 
 시리즈 별로 기법 설명과 함께 제가 만든 Space War 문제의 write-up를 쓰거나 해외 CTF 업솔빙 및 기법에 해당하는 CTF문제를 정리할겁니다.
 그래서 최종적으로 XS-Leaks 익스플로잇 템플릿을 만들어 보고 XS-Leaks을 공부하시는 분들에게 교보재가 되었으면 합니다.
@@ -114,7 +114,7 @@ DNS rebinding이란 기법으로 해당 기법도 SOP와 관련된 공격 기법
 
 
 그럼 문제 코드의 필요한 부분만 살펴보겠습니다.
-코드 전체를 보고 싶으시다면 [chall.hspace.io](https://chall.hspace.io)에서 다운 받으실 수 있습니다. :wink: 
+코드 전체를 보고 싶으시다면 [chall.hspace.io](https://chall.hspace.io)에서 다운 받으실 수 있습니다.
 
 
 **app.js**
@@ -298,7 +298,7 @@ window.onfocus = function() {
 ---
 ### LoX-Zombie
 5월 WEB Space War에 출제된 LoX-Zombie 문제분석과 익스플로잇을 진행해보겠습니다.
-LoX-goblin의 문제 난이도는 hard입니다.
+LoX-Zombie의 문제 난이도는 hard입니다.
 
 **app.js**
 ```js
@@ -465,11 +465,11 @@ hspace blog는 처음이고 마크다운에 익숙하지 않아서 아직 부족
 
 ---
 ## Reference
-[Mitigation: Same Origin Policy](https://dreamhack.io/lecture/courses/186)
-[[WHA-C] Exploit Tech: XS-Search](https://dreamhack.io/lecture/courses/330)
-[Frame Counting](https://xsleaks.dev/docs/attacks/frame-counting/)
-[[WHA-C] Exercise: XS-Search](https://dreamhack.io/lecture/courses/338)
-[ID Attribute](https://xsleaks.dev/docs/attacks/id-attribute/)
-[xs-leak-leaking-ids-using-focus](https://portswigger.net/research/xs-leak-leaking-ids-using-focus)
-[id-HTML](https://developer.mozilla.org/ko/docs/Web/HTML/Global_attributes/id)
-[Pigeon Aircraft Takeoff - Solution](https://github.com/zeyu2001/My-CTF-Challenges/blob/main/Cyber-League-M1/pigeon-aircraft-takeoff/solve/solve.md)
+- [Mitigation: Same Origin Policy](https://dreamhack.io/lecture/courses/186)
+- [[WHA-C] Exploit Tech: XS-Search](https://dreamhack.io/lecture/courses/330)
+- [Frame Counting](https://xsleaks.dev/docs/attacks/frame-counting/)
+- [[WHA-C] Exercise: XS-Search](https://dreamhack.io/lecture/courses/338)
+- [ID Attribute](https://xsleaks.dev/docs/attacks/id-attribute/)
+- [xs-leak-leaking-ids-using-focus](https://portswigger.net/research/xs-leak-leaking-ids-using-focus)
+- [id-HTML](https://developer.mozilla.org/ko/docs/Web/HTML/Global_attributes/id)
+- [Pigeon Aircraft Takeoff - Solution](https://github.com/zeyu2001/My-CTF-Challenges/blob/main/Cyber-League-M1/pigeon-aircraft-takeoff/solve/solve.md)
