기술 블로그 1차 수정

--- a/_posts/2024-09-15-XS-Leak101#2.md
+++ b/_posts/2024-09-15-XS-Leak101#2.md
@@ -1,14 +1,15 @@
 ---
-title: XS-Leak101#1
+title: XS-Leak101#2
 description: Visited link XS-Leak라는 기법을 알아봅니다.
 # author: 임예준(Burnnnnny)
 date: 2024-09-18 02:17:33 +0900
-tags: [tech, Web]
-categories: [Tech, Web]
+tags: [Tech, Webhacking]
+categories: [Tech, Webhacking]
 comments: false
 math: true
 mermaid: false
 pin: false
+image: /assets/img/XS-Leak101_1/XS-Leak2_thumbnail.png
 ---
 
 ### 목차
