--- a/_posts/2024-05-28-xs-leaks101-1.md
+++ b/_posts/2024-05-28-xs-leaks101-1.md
@@ -1,14 +1,15 @@
 ---
-title: XS-Leaks101#0
+title: XS-Leaks101#1
 description: XS Leaks 기법에 대한 설명과 Space War에 출제된 문제를 풀어보는 write-up입니다.
 # author: 임예준(Burnnnnny)
 date: 2024-05-28 02:17:33 +0900
-tags: [tech, webhacking]
+tags: [Tech, Webhacking]
 categories: [Tech, Webhacking]
 comments: false
 math: true
 mermaid: false
 pin: false
+image: /assets/img/XS-Leak101_1/XS-Leak1_thumbnail.png
 ---
 
 ### 목차
