게시물 작성자 오류 수정

--- a/_posts/2024-05-28-xs-leaks101-1.md
+++ b/_posts/2024-05-28-xs-leaks101-1.md
@@ -1,7 +1,7 @@
 ---
 title: XS-Leaks101#1
 description: XS Leaks 기법에 대한 설명과 Space War에 출제된 문제를 풀어보는 write-up입니다.
-# author: 임예준(Burnnnnny)
+author: 임예준(Burnnnnny)
 date: 2024-05-28 02:17:33 +0900
 tags: [Tech, Webhacking]
 categories: [Tech, Webhacking]
