--- a/_posts/2024-09-15-XS-Leak101#2.md
+++ b/_posts/2024-09-15-XS-Leak101#2.md
@@ -1,7 +1,7 @@
 ---
 title: XS-Leak101#2
 description: Visited link XS-Leak라는 기법을 알아봅니다.
-# author: 임예준(Burnnnnny)
+author: 임예준(Burnnnnny)
 date: 2024-09-18 02:17:33 +0900
 tags: [Tech, Webhacking]
 categories: [Tech, Webhacking]
